<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ex.dagger.app.MainActivity">


    <TextView android:text="@string/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_now"
        android:textStyle="bold"/>

    <TextView android:id="@+id/timeNow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <TextView android:text="@string/time_tomorrow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <TextView android:id="@+id/timeTomorrow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <Button android:id="@+id/refreshTime"
        android:text="@string/refresh_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <Button android:id="@+id/showNextActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_next_activity"/>
</LinearLayout>
